--- a/Intro_to_Torch.ipynb
+++ b/Intro_to_Torch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTenml1FFPEujwwoKO1Bxc",
+      "authorship_tag": "ABX9TyOYqGPVO9Kx38x4eMR2AsMN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,9 +39,251 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "torch.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "aw8AJumoHby8",
+        "outputId": "fca2ae30-b10f-4f41-afbd-2e5582b0980e"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.3.0+cu121'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# LISTS"
+      ],
+      "metadata": {
+        "id": "gaCwG04_JhkR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = [[1,2,3,4,5],[6,7,8,9,10]]\n",
+        "my_list"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w4yKJOtEJo5Y",
+        "outputId": "c32d6ad8-f7bf-4a86-e657-f16c5fa5b656"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[1, 2, 3, 4, 5], [6, 7, 8, 9, 10]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# NUMPY ARRAY"
+      ],
+      "metadata": {
+        "id": "Dj3r__8vKC7H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "DBl2epmYJ8NI"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np1 = np.random.rand(3,4)\n",
+        "np1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1_-1szSMJtEm",
+        "outputId": "7d839e01-3fed-46d6-b982-66b39e8990d3"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.63758713, 0.09312332, 0.0511328 , 0.46913373],\n",
+              "       [0.46490614, 0.15757814, 0.99660498, 0.11179384],\n",
+              "       [0.28244474, 0.0614699 , 0.42776982, 0.87818945]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# TENSORS"
+      ],
+      "metadata": {
+        "id": "6HpJsMV2J66J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_2d = torch.randn(3,4)\n",
+        "tensor_2d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_umtlAwbKH3x",
+        "outputId": "f11a1d68-14b0-4378-bd82-03e0438b2983"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 2.0742, -0.0062, -0.7357,  1.1023],\n",
+              "        [-1.2119,  0.0665,  1.2670,  0.0792],\n",
+              "        [-0.0934, -0.2511,  1.2057, -0.0151]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_3d = torch.zeros(2,3,4)\n",
+        "tensor_3d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bl2uNxo8KM-3",
+        "outputId": "7b61b046-ba6a-49bc-eb59-c70f477f3251"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## create tensor out of numpy array\n",
+        "my_tensor = torch.tensor(np1)\n",
+        "my_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Tiubp6nTLkr_",
+        "outputId": "900dd7c7-d055-40ed-eb79-ed7972c59be0"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.6376, 0.0931, 0.0511, 0.4691],\n",
+              "        [0.4649, 0.1576, 0.9966, 0.1118],\n",
+              "        [0.2824, 0.0615, 0.4278, 0.8782]], dtype=torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_tensor.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IxNkkkE2L6fu",
+        "outputId": "18499ece-7e97-408e-e2fb-0624f74ce7b5"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "aw8AJumoHby8"
+        "id": "-oJDGc1MMDLY"
       },
       "execution_count": null,
       "outputs": []
